--- a/cv_project/requirements.txt
+++ b/cv_project/requirements.txt
@@ -68,9 +68,9 @@ sympy==1.12
 tenacity==8.2.3
 toml==0.10.2
 toolz==0.12.1
-torch==2.2.1+cu121
-torchaudio==2.2.1+cu121
-torchvision==0.17.1+cu121
+torch==2.2.1
+torchaudio==2.2.1
+torchvision==0.17.1
 tornado==6.4
 tqdm==4.66.2
 traitlets==5.14.1
