--- a/cv_project/requirements.txt
+++ b/cv_project/requirements.txt
@@ -39,6 +39,7 @@ nest-asyncio==1.6.0
 networkx==3.2.1
 numpy==1.26.3
 opencv-python==4.9.0.80
+opencv-python-headless==4.5.1.48
 packaging==23.2
 pandas==2.2.1
 parso==0.8.3
