--- a/cv_project/requirements.txt
+++ b/cv_project/requirements.txt
@@ -38,8 +38,14 @@ mpmath==1.3.0
 nest-asyncio==1.6.0
 networkx==3.2.1
 numpy==1.26.3
-opencv-python
+
+
 opencv-python-headless==4.5.1.48
+opencv-python==4.5.5.64
+opencv-contrib-python==4.5.5.62
+
+
+
 packaging==23.2
 pandas==2.2.1
 parso==0.8.3
