--- a/cv_project/requirements.txt
+++ b/cv_project/requirements.txt
@@ -49,8 +49,11 @@ nvidia-nccl-cu12==2.19.3
 nvidia-nvjitlink-cu12==12.3.101
 nvidia-nvtx-cu12==12.1.105
 
-opencv-python==4.9.0.80
-opencv-python-headless==4.8.1.78
+opencv-python
+opencv-python-headless
+PyDrive2
+azure-storage-blob
+ultralytics==8.1.19
 
 packaging==23.2
 pandas==2.2.1
@@ -81,7 +84,7 @@ seaborn==0.13.2
 six==1.16.0
 smmap==5.0.1
 stack-data==0.6.3
-streamlit==1.31.1
+streamlit
 sympy==1.12
 tenacity==8.2.3
 thop==0.1.1.post2209072238
@@ -97,10 +100,12 @@ typing_extensions==4.10.0
 tzdata==2024.1
 tzlocal==5.2
 
-ultralytics==8.1.19
+
 
 urllib3==2.2.1
 validators==0.22.0
 watchdog==4.0.0
 wcwidth==0.2.13
 zipp==3.17.0
+
+
