--- a/cv_project/requirements.txt
+++ b/cv_project/requirements.txt
@@ -50,10 +50,12 @@ nvidia-nvjitlink-cu12==12.3.101
 nvidia-nvtx-cu12==12.1.105
 
 opencv-python
-opencv-python-headless
+opencv-python-headless>=4.1.2
 PyDrive2
 azure-storage-blob
 ultralytics==8.1.19
+stqdm
+
 
 packaging==23.2
 pandas==2.2.1
@@ -99,9 +101,6 @@ triton==2.2.0
 typing_extensions==4.10.0
 tzdata==2024.1
 tzlocal==5.2
-
-
-
 urllib3==2.2.1
 validators==0.22.0
 watchdog==4.0.0
